--- a/plugin.xml
+++ b/plugin.xml
@@ -3,6 +3,7 @@
   <extension-point id="dita.rss.map"/>
   
   <require plugin="org.dita4publishers.common.mapdriven"/> 
+  <require plugin="org.dita4publishers.common.xslt"/> 
   <require plugin="org.dita-community.common.xslt"/> 
   <template file="build_transtype-rss_template.xml"/>  
   <template file="xsl/map2rss_template.xsl"/>
